--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,6 +11,11 @@ body {
   height: 10rem;
 }
 
+#nom-fam {
+  color: #d9d9d9;
+  height: 10rem;
+}
+
 .nomdroite {
   background-color: #80bcc5;
   color: white;
