--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -9,7 +9,11 @@ body{
   color: white;
   height: 10rem;
 }
+#nom-fam{
+  color: #d9d9d9;
+  height: 10rem;
 
+}
 .nomdroite{
   background-color: #80bcc5;
   color: white;
